# pyresidfp

./: .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  build_wheels.yml  ci.yml  codeql.yml  release.yml
pyresidfp/: __init__.py  musical_scale.py  registers.py  sound_interface_device.py
scripts/: lint.sh  prepare_for_build.sh  regenerate-stubs.sh  requirements-dev.txt
src/: PythonSid.cpp  PythonSid.h  config.h.in  pyresidfp.cpp
src/pyresidfp/: __init__.py  _pyresidfp.pyi  musical_scale.py  registers.py  sound_interface_device.py
src/pyresidfp/_pyresidfp/: __init__.pyi
src/residfp/: Dac.cpp  Filter6581.h  Filter8580.h  FilterModelConfig.h  FilterModelConfig6581.cpp  FilterModelConfig6581.h  FilterModelConfig8580.cpp  FilterModelConfig8580.h  OpAmp.h  SID.cpp  SID.h  Voice.h  WaveformCalculator.cpp  WaveformCalculator.h  WaveformGenerator.h  siddefs-fp.h.in
src/residfp/resample/: Resampler.h  SincResampler.cpp  SincResampler.h  TwoPassSincResampler.h  ZeroOrderResampler.h
tests/: test_basic.py  test_versions.py
