[project]
requires-python = ">=3.6"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0",
    "cmake",
    "scikit-build",
    "ninja",
    "setuptools-git-versioning>=1.8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
