#  This file is part of pyresidfp, a SID emulation package for Python.
#
#  Copyright (c) 2018-2023.  Sebastian Klemke <pypi@nerdheim.de>
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pyresidfp/_version.py", "src/pyresidfp/py.typed"]
sdist.exclude = [".github", ".gitignore", "scripts", "CODEOWNERS"]
wheel.packages = ["src/pyresidfp"]
wheel.install-dir = "pyresidfp"
minimum-version = "build-system.requires"
cmake.version = ">=3.20.0"
ninja.version = ">=1.10.2"

[tool.setuptools_scm]
write_to = "src/pyresidfp/_version.py"

[project]
name = "pyresidfp"
authors = [
  { name="Sebastian Klemke", email="pypi@nerdheim.de" },
]
description = "Emulates the SID sound-chip"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: System :: Emulators",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
]
requires-python = ">=3.10.0,<4.0.0"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/pyresidfp/pyresidfp"
"Bug Tracker" = "https://github.com/pyresidfp/pyresidfp/issues"
